--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
-
 ![]({{site.baseurl}}/images/im_sorry_dave.jpg "https://github.com/fastai/fastpages")
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+**Dave :** Hello, HAL. Do you read me, HAL?
 
-You can edit the `index.html` file to change this content.
+**HAL :** Affirmative, Dave. I read you.
+
+**Dave :** Open the pod bay doors, HAL.
+
+**HAL :** I'm sorry, Dave. I'm afraid I can't do that.
 
 # Posts
