deploy: 394120fab8b6308274ef95ad30001915385b9807

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://bailey-deep-learning.github.io/im_sorry_dave/404.html" />
 <meta property="og:site_name" content="I’m sorry, Dave. I’m afraid I can’t do that." />
 <script type="application/ld+json">
-{"description":"A deep learning journal of sorts","url":"https://bailey-deep-learning.github.io/im_sorry_dave/404.html","@type":"WebPage","headline":"I’m sorry, Dave. I’m afraid I can’t do that.","@context":"https://schema.org"}</script>
+{"url":"https://bailey-deep-learning.github.io/im_sorry_dave/404.html","@type":"WebPage","headline":"I’m sorry, Dave. I’m afraid I can’t do that.","description":"A deep learning journal of sorts","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/im_sorry_dave/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://bailey-deep-learning.github.io/im_sorry_dave/feed.xml" title="I'm sorry, Dave. I'm afraid I can't do that." /><link rel="shortcut icon" type="image/x-icon" href="/im_sorry_dave/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
